--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -3,3 +3,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Inter&display=swap');
 
 
+body{
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+}
+
+.wrapper{
+    width: 90%;
+    height: 1000px;
+    margin: 0 auto;
+    background-color: blue;
+}
+.header{
+    width: 100%;
+    height: 100px;
+    padding-top: 50px;
+    background-color: #E4E7EC;
+}
