--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -10,13 +10,87 @@ body{
 
 .wrapper{
     width: 90%;
-    height: 1000px;
+    height: 200px;
     margin: 0 auto;
-    background-color: blue;
+    background-color: #E4E7EC;
 }
 .header{
     width: 100%;
-    height: 100px;
+    height: 130px;
     padding-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #E4E7EC;
+}
+.logo{
+padding-left: 50px;
+}
+
+.logo img{
+    width: 100px;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+nav{
+    flex: 1;
+    text-align: right;
+}
+nav ul{
+    display: inline-block;
+    list-style-type: none;
+}
+nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+    padding: 8px 12px;
+}
+nav ul li a{
+    text-decoration: none;
+}
+nav ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #1F4591;
+    display:block;
+    margin: auto;
+    transition: 0.5s;
+}
+nav ul li:hover::after{
+    width: 100%;
+}
+
+h2{
+    font-size: 38px;
+    font-family: 'Cabin', sans-serif;
+    justify-items: center;
+}
+
+.menus .small-container{
+    max-width: 1000px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+.title{
+    text-align: center;
+    margin: 0 auto 50px;
+    position: relative;
+    line-height: 60px;
+    color: #555;
+}
+.title::after{
+    content: '';
+    background: #1F4591;
+    width: 180px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
