--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -13,17 +13,56 @@ body{
     background-color: #E4E7EC;
 }
 nav{
-    background-color: green;
+    padding: 20px 0px;
+    margin: 0 auto;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+}
+.image{
+    width: 14%;
     display: flex;
     align-items: center;
     flex-direction: row;
 }
-.image{
-    width: 5%;
+.txtI{
+    font-family: 'SIMPLIFICA';
+    margin-left: 30px;
+    font-size: 20px;
 }
 .image img{
     width: 100%;
 }
-.zoek img{
-    filter: invert(19%) sepia(73%) saturate(1968%) hue-rotate(205deg) brightness(93%) contrast(85%);
+.rechts{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+input[type="text"]
+{
+    font-family: 'SIMPLIFICA';
+    font-size: 20px;
+    background-color: white;
+    width: 50%;
+    height: 35px;
+    border: 1px solid #000;
+    outline: none;
+    padding: 0 15px;
+    border-radius: 25px 0 0 25px;
+}
+input[type="submit"]
+{
+    font-family: 'SIMPLIFICA';
+    font-size: 18px;
+    border-radius: 0 25px 25px 0;
+    border: none;
+    outline: none;
+    margin-left: -5px;
+    width: 30%;
+    height: 35px;
+    cursor: pointer;
+    color: white;
+    background: #1F4591;
 }
