--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -4,15 +4,88 @@
 	src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
 
-body {
+.locatie {
+	grid-column: 2/5;
+	grid-row: 3/4;
+}
+.tel {
+	grid-column: 2/5;
+	grid-row: 4/5;
+	margin-top: 10%;
+}
+.head h1 {
+	font-family: "SIMPLIFICA";
+	font-size: 60px;
+	font-weight: 100;
+}
+.head {
+	grid-row: 1/2;
+	grid-column: 2/3;
+	margin-top: 20px;
+}
+.grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: repeat(10, 1fr);
+	font-family: "inter";
+	font-size: 15px;
 }
-.locatie {
-	grid-column: 3/4;
+* {
+	margin: 0;
+	padding: 0;
 }
-.tel {
-	grid-column: 3/4;
-	grid-row: ;
+body {
+	background-color: #e4e7ec;
+}
+nav {
+	padding: 20px 0px;
+	margin: 0 auto;
+	width: 85%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: row;
+}
+.image {
+	width: 14%;
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+}
+.txtI {
+	font-family: "SIMPLIFICA";
+	margin-left: 30px;
+	font-size: 20px;
+}
+.image img {
+	width: 100%;
+}
+.rechts {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+input[type="text"] {
+	font-family: "SIMPLIFICA";
+	font-size: 20px;
+	background-color: white;
+	width: 50%;
+	height: 35px;
+	border: 1px solid #000;
+	outline: none;
+	padding: 0 15px;
+	border-radius: 25px 0 0 25px;
+}
+input[type="submit"] {
+	font-family: "SIMPLIFICA";
+	font-size: 18px;
+	border-radius: 0 25px 25px 0;
+	border: none;
+	outline: none;
+	margin-left: -5px;
+	width: 30%;
+	height: 35px;
+	cursor: pointer;
+	color: white;
+	background: #1f4591;
 }
