--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -23,6 +23,13 @@
 	grid-column: 2/3;
 	margin-top: 20px;
 }
+.mail {
+	grid-column: 2 / 7;
+	grid-row: 5/9;
+}
+.mail h3 {
+	margin-top: 6%;
+}
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
