--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -5,13 +5,22 @@
 }
 
 .locatie {
+	grid-column: 3/8;
+	grid-row: 3/4;
+}
+.locatieIcon {
 	grid-column: 2/5;
 	grid-row: 3/4;
 }
 .tel {
-	grid-column: 2/5;
+	grid-column: 3/9;
 	grid-row: 4/5;
-	margin-top: 10%;
+	margin-top: 25px;
+}
+.telIcon {
+	grid-column: 2/3;
+	grid-row: 4/5;
+	margin-top: 30px;
 }
 .head h1 {
 	font-family: "SIMPLIFICA";
@@ -24,11 +33,15 @@
 	margin-top: 20px;
 }
 .mail {
-	grid-column: 2 / 7;
+	grid-column: 3 / 9;
 	grid-row: 5/9;
 }
 .mail h3 {
 	margin-top: 6%;
+}
+.mailIcon {
+	grid-column: 2/3;
+	grid-row: 6/8;
 }
 .grid {
 	display: grid;
