--- a/NelleFavoreel/style_Nelle.css
+++ b/NelleFavoreel/style_Nelle.css
@@ -20,8 +20,9 @@
 .telIcon {
 	grid-column: 2/3;
 	grid-row: 4/5;
-	margin-top: 30px;
+	margin-top: 20px;
 }
+
 .head h1 {
 	font-family: "SIMPLIFICA";
 	font-size: 60px;
@@ -37,11 +38,16 @@
 	grid-row: 5/9;
 }
 .mail h3 {
-	margin-top: 6%;
+	margin-top: 25px;
 }
 .mailIcon {
 	grid-column: 2/3;
 	grid-row: 6/8;
+	margin-top: 15px;
+}
+.mapouter {
+	grid-column: 8/12;
+	grid-row: 2/10;
 }
 .grid {
 	display: grid;
