--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -10,23 +10,16 @@
 body{
     margin: 0;
     font-family: 'Inter', sans-serif;
+    background-color: #E4E7EC;
 }
 
 .wrapper{
-    width: 90%;
-    height: 200px;
+    width: 100%;
+    height: 150px;
     margin: 0 auto;
     background-color: #E4E7EC;
 }
-.header{
-    width: 100%;
-    height: 130px;
-    padding-top: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #E4E7EC;
-}
+
 .logo{
 padding-left: 50px;
 }
@@ -55,6 +48,8 @@ nav ul li {
 nav ul li a{
     text-decoration: none;
 }
+
+/*lijn onder de navbar*/
 nav ul li::after{
     content: '';
     width: 0%;
@@ -71,27 +66,25 @@ nav ul li:hover::after{
 h1{
     font-size: 48px;
     font-family: 'SIMPLIFICA';
-    justify-items: center;
 }
 .main{
-    width: 90%;
+    width: 80%;
     height: 200px;
     margin: 0 auto;
     background-color: #E4E7EC;
 }
 .main .first-main{
     max-width: 1000px;
-    margin: auto;
-    padding-left: 25px;
     padding-right: 25px;
 }
 .title{
-    text-align: center;
-    margin: 50 auto 50px;
+    grid-row: 1/2;
+	grid-column: 2/3;
     position: relative;
     line-height: 70px;
-    color: #555;
+    color: #000;
 }
+/*
 .title::after{
     content: '';
     background: #1F4591;
@@ -100,24 +93,27 @@ h1{
     border-radius: 10px;
     position: absolute;
     bottom: 0;
-    left: 50%;
+    left: 9%;
     transform: translateX(-50%);
 }
-
+*/
 h2{
     font-size: 22px;
     font-weight: 300;
+    color: #000;
 }
 
 h3{
     font-size: 20px;
     font-weight: bold;
+    color: #000;
 }
 .inschrijvingen {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: red;
+    background-color: #E4E7EC;
+    padding-top: 50px;
 }
 
 .inschrijvingen div {
@@ -127,12 +123,13 @@ h3{
 .inschrijvingen-class p,
 .inschrijvingen-class h4 {
     width: 100%;
+    
 }
 .foto-inschrijvingen{
     padding-top: 50px;
     display: block;
     margin-left: auto;
-    margin-right: 700px;
+    margin-right: 600px;
     width: 50%;
     
 }
@@ -141,7 +138,7 @@ h3{
     
 }
 
-.second-tekst{
+.tekst2{
     padding-bottom: 150px;
 }
 
@@ -149,7 +146,7 @@ h3{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: red;
+    background-color: #E4E7EC;
 }
 
 .inschrijvingen2 div {
@@ -160,3 +157,84 @@ h3{
 .inschrijvingen-class2 h4 {
     width: 100%;
 }
+
+footer {
+    background-color: #8ba1c4;
+    color: black;
+    bottom: 0;
+    width: 100%;
+    font-size: 16px;
+    padding-top: 10px;
+  }
+  footer * {
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+  }
+  .row {
+    padding: 1em 1em;
+  }
+  .row.primary {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    align-items: stretch;
+  }
+  .column {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10 2em;
+    min-height: 15em;
+  }
+  footer h3 {
+    width: 100%;
+    text-align: left;
+    color: #000;
+    font-size: 1.4em;
+    white-space: nowrap;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+  li:not(:first-child) {
+    margin-top: 0.8em;
+  }
+  ul li a {
+    color: #000;
+    text-decoration: none;
+  }
+  ul li a:hover {
+    color: #c7940a;
+  }
+  .about p {
+    text-align: justify;
+    line-height: 2;
+    margin: 0;
+  }
+  input,
+  button {
+    font-size: 1em;
+    padding: 1em;
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 5px;
+  }
+  button {
+    background-color: #c7940a;
+    color: #ffffff;
+  }
+  div.social {
+    display: flex;
+    justify-content: space-around;
+    font-size: 2.4em;
+    flex-direction: row;
+    margin-top: 0.5em;
+  }
+  .social i {
+    color: #bac6d9;
+  }
+  
