--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -47,6 +47,7 @@ form{
     display: flex;
     align-items: center;
 }
+/*Searchbox*/
 input[type="text"]
 {
     font-family: 'SIMPLIFICA';
@@ -57,13 +58,13 @@ input[type="text"]
     border: 1px solid #000;
     outline: none;
     padding: 0 20px;
-    border-radius: 25px 0 0 25px;
+    border-radius: 15px 0 0 15px;
 }
 input[type="submit"]
 {
     font-family: 'SIMPLIFICA';
     font-size: 18px;
-    border-radius: 0 25px 25px 0;
+    border-radius: 0 15px 15px 0;
     border: none;
     outline: none;
     width: 30%;
@@ -72,9 +73,12 @@ input[type="submit"]
     color: white;
     background: #1F4591;
 }
+/*Searchbox*/
+
 .nav ul{
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     flex-direction: row;
     margin-right: 20px;
 }
@@ -122,6 +126,9 @@ input[type="submit"]
 }
 
 /*DropdownList*/
+ul.dropdown{
+    z-index: 10;
+}
 ul li ul.dropdown li{
     display: block;
 }
@@ -141,7 +148,6 @@ ul.dropdown li::after{
     margin: auto;
     transition: 0.3s;
 }
-
 ul.dropdown li:hover::after{
     width: 100%;
 }
@@ -149,4 +155,43 @@ ul.dropdown li a:hover{
     color: #1F4591;
     font-weight: 600;
     transition: 0.1s;
+}
+/*Dropdownlist*/
+.svg{ 
+    width: 4%;
+}
+.svg img{
+    width: 100%;
+}
+
+/*footer*/
+.foot{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 auto;
+    width: 85%;
+}
+.wit{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    background-color: #E4E7EC;
+    margin: 0 auto;
+    width: 85%;
+    height: 250px;
+}
+.kader{
+    position: absolute;
+    background-color: #1F4591;
+    opacity: 80%;
+    border-radius: 15px;
+    margin-top: 100px;
+    width: 280px;
+    height: 290px;
+}
+.blauw{
+    background-color: #1F4591;
+    opacity: 20%;
+    width: 100%;
+    height: 250px;
 }
