--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -190,8 +190,18 @@ ul.dropdown li a:hover{
     height: 290px;
 }
 .blauw{
+    display: flex;
+    flex-direction: row;
     background-color: #1F4591;
-    opacity: 20%;
+    opacity: 30%;
     width: 100%;
     height: 250px;
+}
+.txtB{
+    margin: 0 auto;
+    width: 80%;
+}
+.txtBlauw{
+    color: white;
+    font-size: 200px;
 }
