--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -3,51 +3,9 @@
 	font-family: "SIMPLIFICA";
 	src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
-
-.locatie {
-	grid-column: 3/8;
-	grid-row: 3/4;
-}
-.locatieIcon {
-	grid-column: 2/5;
-	grid-row: 3/4;
-}
-.tel {
-	grid-column: 3/9;
-	grid-row: 4/5;
-	margin-top: 25px;
-}
-.telIcon {
-	grid-column: 2/3;
-	grid-row: 4/5;
-	margin-top: 20px;
-}
-
-.head h1 {
-	font-family: "SIMPLIFICA";
-	font-size: 60px;
-	font-weight: 100;
-}
-.head {
-	grid-row: 1/2;
-	grid-column: 2/3;
-	margin-top: 40px;
-}
-.mail {
-	grid-column: 3 / 9;
-	grid-row: 5/9;
-	margin-top: 15px;
-}
-.mail h3 {
-	margin-top: 25px;
-}
-.mailIcon {
-	grid-column: 2/3;
-	grid-row: 6/8;
-}
-.mapouter {
-	grid-column: 8/12;
-	grid-row: 2/10;
+* {
+	margin: 0;
+	padding: 0;
 }
 .grid {
 	display: grid;
@@ -114,4 +72,24 @@ input[type="submit"] {
 	cursor: pointer;
 	color: white;
 	background: #1f4591;
+}
+.foto {
+	grid-column: 7/12;
+	grid-row: 1/8;
+	margin-top: 250px;
+}
+.foto img {
+	width: 100%;
+}
+.tekst {
+	grid-column: 2/7;
+	margin-top: 100px;
+}
+.head {
+	margin-bottom: 140px;
+	font-family: "SIMPLIFICA";
+}
+.head h1 {
+	font-size: 60px;
+	font-weight: 100;
 }
