--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -1,240 +1,300 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Cabin:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
 
 @font-face {
     font-family: 'SIMPLIFICA';
     src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
 
-body{
+*{
     margin: 0;
-    font-family: 'Inter', sans-serif;
-    background-color: #E4E7EC;
+    padding: 0;
 }
-
-.wrapper{
-    width: 100%;
-    height: 150px;
-    margin: 0 auto;
-    background-color: #E4E7EC;
-}
-
-.logo{
-padding-left: 50px;
-}
-
-.logo img{
-    width: 100px;
-}
-.navbar{
+body{
     display: flex;
-    align-items: center;
-    padding: 10px;
-}
-nav{
-    flex: 1;
-    text-align: right;
-}
-nav ul{
-    display: inline-block;
-    list-style-type: none;
-}
-nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-    padding: 8px 12px;
-}
-nav ul li a{
-    text-decoration: none;
-}
-
-/*lijn onder de navbar*/
-nav ul li::after{
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: #1F4591;
-    display:block;
-    margin: auto;
-    transition: 0.5s;
-}
-nav ul li:hover::after{
-    width: 100%;
-}
-
-h1{
-    font-size: 48px;
-    font-family: 'SIMPLIFICA';
-}
-.main{
-    width: 80%;
-    height: 200px;
-    margin: 0 auto;
+    flex-direction: column;
     background-color: #E4E7EC;
+}
+.nav{
+  padding: 20px 0px;
+  margin: 0 auto;
+  width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.image{
+  width: 190px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+.txtI{
+  font-family: 'SIMPLIFICA';
+  margin-left: 30px;
+  font-size: 20px;
+}
+.image img{
+  width: 100%;
+}
+.rechts{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+form{
+  display: flex;
+  align-items: center;
+}
+/*Searchbox*/
+input[type="text"]
+{
+  font-family: 'SIMPLIFICA';
+  font-size: 20px;
+  background-color: white;
+  width: 50%;
+  height: 35px;
+  border: 1px solid #000;
+  outline: none;
+  padding: 0 20px;
+  border-radius: 15px 0 0 15px;
+}
+input[type="submit"]
+{
+  font-family: 'SIMPLIFICA';
+  font-size: 18px;
+  border-radius: 0 15px 15px 0;
+  border: none;
+  outline: none;
+  width: 30%;
+  height: 37px;
+  cursor: pointer;
+  color: white;
+  background: #1F4591;
+}
+/*Searchbox*/
+
+.nav ul{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: row;
+  margin-right: 20px;
+}
+.nav a{
+  color: #000;
+  font-size: 22px;
+  font-family: 'SIMPLIFICA';
+  text-decoration: none;
+}
+.nav li{
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+  list-style: none;
+}
+.menu ul li::after{
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #1F4591;
+  display: block;
+  margin: auto;
+  transition: 0.3s;
+}
+
+.menu ul li:hover::after{
+  width: 100%;
+}
+.dropdown{
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+}
+.menu ul li{
+  display: flex;
+  flex-direction: column;
+}
+.menu{
+  display: flex;
+  flex-direction: row;
+  margin-right: 10px;
+}
+.menu img{
+  width: 15%;
+}
+
+/*DropdownList*/
+ul.dropdown{
+  z-index: 10;
+}
+ul li ul.dropdown li{
+  display: block;
+}
+ul li ul.dropdown{
+  position: absolute;
+  display: none;
+  transition: 0.3s;
+}
+ul li:hover ul.dropdown{
+  display: block;
+}
+ul.dropdown li::after{
+  width: 0%;
+  height: 1px;
+  background: #1F4591;
+  display: none;
+  margin: auto;
+  transition: 0.3s;
+}
+ul.dropdown li:hover::after{
+  width: 100%;
+}
+ul.dropdown li a:hover{
+  color: #1F4591;
+  font-weight: 600;
+  transition: 0.1s;
+}
+/*Dropdownlist*/
+.svg{ 
+  width: 4%;
+}
+.svg img{
+  width: 100%;
+}
+
+.main{
+  width: 85%;
+  height: 200px;
+  margin: 0 auto;
 }
 .main .first-main{
-    max-width: 1000px;
-    padding-right: 25px;
+  max-width: 1000px;
+  padding-right: 25px;
 }
 .title{
-    grid-row: 1/2;
-	grid-column: 2/3;
-    position: relative;
-    line-height: 70px;
-    color: #000;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  position: relative;
+  line-height: 70px;
+  color: #000;
+  font-family: 'SIMPLIFICA';
+  font-size: 60px;
+	font-weight: 100;
+  margin-top: 40px;
+
+}
+.title h1{
+  
 }
 /*
 .title::after{
-    content: '';
-    background: #1F4591;
-    width: 160px;
-    height: 5px;
-    border-radius: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 9%;
-    transform: translateX(-50%);
+  content: '';
+  background: #1F4591;
+  width: 160px;
+  height: 5px;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 9%;
+  transform: translateX(-50%);
 }
 */
 h2{
-    font-size: 22px;
-    font-weight: 300;
-    color: #000;
+  font-size: 22px;
+  font-weight: 300;
+  color: #000;
+  font-family: 'Inter', sans-serif;
 }
 
 h3{
-    font-size: 20px;
-    font-weight: bold;
-    color: #000;
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  font-family: 'Inter', sans-serif;
 }
 .inschrijvingen {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color: #E4E7EC;
-    padding-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 50px;
 }
 
 .inschrijvingen div {
-    width: 30%;
+  width: 30%;
 }
 
 .inschrijvingen-class p,
 .inschrijvingen-class h4 {
-    width: 100%;
-    
+  width: 100%;
+  
 }
 .foto-inschrijvingen{
-    padding-top: 50px;
-    display: block;
-    margin-left: auto;
-    margin-right: 600px;
-    width: 50%;
-    
+  padding-top: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: 600px;
+  width: 50%;
+  
 }
 .foto-inschrijvingen img{
-    width: 200%;
-    
+  width: 200%;
+  
 }
 
 .tekst2{
-    padding-bottom: 150px;
+  padding-bottom: 150px;
+}
+
+.tekst2 h3{
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .inschrijvingen2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color: #E4E7EC;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: #E4E7EC;
 }
 
 .inschrijvingen2 div {
-    width: 30%;
+  width: 30%;
 }
 
 .inschrijvingen-class2 p,
 .inschrijvingen-class2 h4 {
-    width: 100%;
+  width: 100%;
 }
 
-footer {
-    background-color: #8ba1c4;
-    color: black;
-    bottom: 0;
-    width: 100%;
-    font-size: 16px;
-    padding-top: 10px;
-  }
-  footer * {
-    box-sizing: border-box;
-    border: none;
-    outline: none;
-  }
-  .row {
-    padding: 1em 1em;
-  }
-  .row.primary {
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr;
-    align-items: stretch;
-  }
-  .column {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 10 2em;
-    min-height: 15em;
-  }
-  footer h3 {
-    width: 100%;
-    text-align: left;
-    color: #000;
-    font-size: 1.4em;
-    white-space: nowrap;
-  }
-  ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
-  }
-  li:not(:first-child) {
-    margin-top: 0.8em;
-  }
-  ul li a {
-    color: #000;
-    text-decoration: none;
-  }
-  ul li a:hover {
-    color: #c7940a;
-  }
-  .about p {
-    text-align: justify;
-    line-height: 2;
-    margin: 0;
-  }
-  input,
-  button {
-    font-size: 1em;
-    padding: 1em;
-    width: 100%;
-    border-radius: 5px;
-    margin-bottom: 5px;
-  }
-  button {
-    background-color: #c7940a;
-    color: #ffffff;
-  }
-  div.social {
-    display: flex;
-    justify-content: space-around;
-    font-size: 2.4em;
-    flex-direction: row;
-    margin-top: 0.5em;
-  }
-  .social i {
-    color: #bac6d9;
-  }
-  
+/*footer*/
+.foot{
+  display: flex;
+  justify-content: flex-end;
+  margin: 0 auto;
+  width: 85%;
+}
+.wit{
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  background-color: #E4E7EC;
+  margin: 0 auto;
+  width: 85%;
+  height: 250px;
+}
+.kader{
+  position: absolute;
+  background-color: #1F4591;
+  opacity: 80%;
+  border-radius: 15px;
+  margin-top: 100px;
+  width: 280px;
+  height: 290px;
+}
+.blauw{
+  background-color: #1F4591;
+  opacity: 20%;
+  width: 100%;
+  height: 250px;
+}
