--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -13,6 +13,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: #E4E7EC;
+    height: 100%;
 }
 /*nav*/
 .nav{
@@ -127,7 +128,7 @@ input[type="submit"]
 
 /*DropdownList*/
 ul.dropdown{
-    background-color: #1F4591;
+    background-color: white;
     z-index: 10;
 }
 ul li ul.dropdown li{
@@ -154,8 +155,8 @@ ul.dropdown li:hover::after{
     width: 100%;
 }
 ul.dropdown li a:hover{
-    color: white;
-    transition: 0.1s;
+    color: #1F4591;
+    font-weight: 600;
 }
 /*Dropdownlist*/
 .svg{ 
@@ -166,6 +167,11 @@ ul.dropdown li a:hover{
 }
 
 /*footer*/
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 .foot{
     display: flex;
     justify-content: flex-end;
@@ -183,7 +189,7 @@ ul.dropdown li a:hover{
 }
 .kader{
     position: absolute;
-    background-color: #1F4591;
+    background-color: rgba(31, 69, 145, 0.9);
     opacity: 80%;
     border-radius: 15px;
     margin-top: 100px;
@@ -193,16 +199,17 @@ ul.dropdown li a:hover{
 .blauw{
     display: flex;
     flex-direction: row;
-    background-color: #1F4591;
-    opacity: 30%;
+    background-color: rgba(31, 69, 145, 0.2);
     width: 100%;
     height: 250px;
 }
 .txtB{
+    font-family: 'Inter',sans-serif;
+    display: flex;
+    flex-direction: row;
     margin: 0 auto;
     width: 80%;
 }
 .txtBlauw{
-    color: white;
-    font-size: 200px;
+    color: #000;
 }
