--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -129,6 +129,7 @@ input[type="submit"]
 /*DropdownList*/
 ul.dropdown{
     background-color: white;
+    border-radius: 15px;
     z-index: 10;
 }
 ul li ul.dropdown li{
