--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -189,13 +189,23 @@ footer{
     height: 250px;
 }
 .kader{
+    font-family: 'Inter',sans-serif;
     position: absolute;
     background-color: rgba(31, 69, 145, 0.9);
+    color: white;
+    display: flex;
+    flex-direction: column;
     opacity: 80%;
     border-radius: 15px;
     margin-top: 100px;
     width: 280px;
     height: 290px;
+}
+.kader h1{
+    margin-top: 25px;
+    margin-left: 13px;
+    margin-bottom: 4px;
+    font-size: 20px;
 }
 .blauw{
     display: flex;
@@ -210,7 +220,31 @@ footer{
     flex-direction: row;
     margin: 0 auto;
     width: 80%;
+    padding-top: 40px;
 }
+
 .txtBlauw{
     color: #000;
+    margin-right: 130px;
+}
+.txtBlauw h1{
+    font-size: 20px;
+}
+.txtBlauw p{
+    font-size: 16px;
+    margin-top: 20px;
+}
+.txtBlauw a{
+    color: #000;
+   text-decoration: none;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+    margin-left: 10px;
+}
+.icons p{
+    margin-left: 13px;
 }
