--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -204,7 +204,7 @@ footer{
 .kader h1{
     margin-top: 25px;
     margin-left: 13px;
-    margin-bottom: 4px;
+    margin-bottom: 18px;
     font-size: 20px;
 }
 .blauw{
@@ -212,7 +212,7 @@ footer{
     flex-direction: row;
     background-color: rgba(31, 69, 145, 0.2);
     width: 100%;
-    height: 250px;
+    height: 220px;
 }
 .txtB{
     font-family: 'Inter',sans-serif;
@@ -243,8 +243,17 @@ footer{
     flex-direction: row;
     align-items: center;
     margin-top: 15px;
-    margin-left: 10px;
+    margin-left: 40px;
+}
+.icon{
+    width: 14%;
+}
+.icon img{
+    width: 100%;
 }
 .icons p{
+    font-size: 14px;
     margin-left: 13px;
+    line-height: 20px;
+    width: 60%;
 }
