--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -167,7 +167,6 @@ ul.dropdown li a:hover{
 
 .main{
   width: 85%;
-  height: 1700px;
   margin: 0 auto;
 }
 .main .first-main{
@@ -275,7 +274,6 @@ h3{
   width: 100%;
 }
 
-/*footer*/
 .foot{
   display: flex;
   justify-content: flex-end;
@@ -288,21 +286,75 @@ h3{
   justify-content: flex-end;
   background-color: #E4E7EC;
   margin: 0 auto;
-  width: 0%;
+  width: 85%;
   height: 250px;
 }
 .kader{
+  font-family: 'Inter',sans-serif;
   position: absolute;
-  background-color: #1F4591;
+  background-color: rgba(31, 69, 145, 0.9);
+  color: white;
+  display: flex;
+  flex-direction: column;
   opacity: 80%;
   border-radius: 15px;
   margin-top: 100px;
   width: 280px;
   height: 290px;
 }
+.kader h1{
+  margin-top: 25px;
+  margin-left: 13px;
+  margin-bottom: 18px;
+  font-size: 20px;
+}
 .blauw{
-  background-color: #1F4591;
-  opacity: 20%;
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(31, 69, 145, 0.2);
   width: 100%;
-  height: 250px;
+  height: 220px;
+}
+.txtB{
+  font-family: 'Inter',sans-serif;
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  width: 80%;
+  padding-top: 40px;
+}
+
+.txtBlauw{
+  color: #000;
+  margin-right: 130px;
+}
+.txtBlauw h1{
+  font-size: 20px;
+}
+.txtBlauw p{
+  font-size: 16px;
+  margin-top: 20px;
+}
+.txtBlauw a{
+  color: #000;
+ text-decoration: none;
+}
+.icons{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 15px;
+  margin-left: 40px;
+}
+.icon{
+  width: 14%;
+}
+.icon img{
+  width: 100%;
+}
+.icons p{
+  font-size: 14px;
+  margin-left: 13px;
+  line-height: 20px;
+  width: 60%;
 }
