--- a/NassimEjja/Style.css
+++ b/NassimEjja/Style.css
@@ -213,3 +213,88 @@ h2 {
 .oude {
 	padding-bottom: 50px;
 }
+/*footer*/
+.foot {
+	display: flex;
+	justify-content: flex-end;
+	margin: 0 auto;
+	width: 85%;
+}
+.wit {
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-end;
+	background-color: #e4e7ec;
+	margin: 0 auto;
+	width: 85%;
+	height: 250px;
+}
+.kader {
+	font-family: "Inter", sans-serif;
+	position: absolute;
+	background-color: rgba(31, 69, 145, 0.9);
+	color: white;
+	display: flex;
+	flex-direction: column;
+	opacity: 80%;
+	border-radius: 15px;
+	margin-top: 100px;
+	width: 280px;
+	height: 290px;
+}
+.kader h1 {
+	margin-top: 25px;
+	margin-left: 13px;
+	margin-bottom: 18px;
+	font-size: 20px;
+}
+.blauw {
+	display: flex;
+	flex-direction: row;
+	background-color: rgba(31, 69, 145, 0.2);
+	width: 100%;
+	height: 220px;
+}
+.txtB {
+	font-family: "Inter", sans-serif;
+	display: flex;
+	flex-direction: row;
+	margin: 0 auto;
+	width: 80%;
+	padding-top: 40px;
+}
+
+.txtBlauw {
+	color: #000;
+	margin-right: 130px;
+}
+.txtBlauw h1 {
+	font-size: 20px;
+}
+.txtBlauw p {
+	font-size: 16px;
+	margin-top: 20px;
+}
+.txtBlauw a {
+	color: #000;
+	text-decoration: none;
+}
+.icons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin-top: 15px;
+	margin-left: 40px;
+}
+.icon {
+	width: 14%;
+}
+.icon img {
+	width: 100%;
+}
+.icons p {
+	font-size: 14px;
+	margin-left: 13px;
+	line-height: 20px;
+	width: 60%;
+}
