--- a/BerkayUnutkan/style_berkay2.css
+++ b/BerkayUnutkan/style_berkay2.css
@@ -171,6 +171,7 @@ ul.dropdown li a:hover{
     width: 85%;
     margin: 0 auto;
     padding-top: 20px;
+    
 }
 
 .hoofdtitel{
@@ -185,49 +186,140 @@ ul.dropdown li a:hover{
     text-decoration-color: #1F4591;
     line-height: 15px;
 }
+.schoolbestuur{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+.schoolbestuur h3{
+    padding-bottom: 10px;
+    font-family: 'Inter' , 'sans-serif';
+    font-weight: lighter;
+}
+
+.schoolbestuur ul li{
+    list-style-type: circle;
+    font-family: 'Inter' , 'sans-serif';
+}
+
+.schoolbestuur div{
+    width: 60%;
+}
+
+.schoolbestuurtekst {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 60px;
+    font-size: 16px;
+    font-family: 'Inter', 'sans-serif';
+    font-weight: bold;
+  }
+
+.subtitel2{
+    padding-top: 80px;
+    font-family: 'Inter' , 'sans-serif';
+    text-decoration: underline;
+    text-decoration-color: #1F4591;
+    line-height: 15px;
+}
+.schoolbestuur2{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+.schoolbestuur2 h3{
+    padding-bottom: 10px;
+    font-family: 'Inter' , 'sans-serif';
+    font-weight: lighter;
+}
 
 
+.schoolbestuur2 ul li{
+    list-style-type: circle;
+    font-family: 'Inter' , 'sans-serif';
 
+}
 
+.schoolbestuur2 div{
+    width: 60%;
+}
 
+.schoolbestuurtekst2 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    font-size: 16px;
+    font-family: 'Inter', 'sans-serif';
+    font-weight: bold;
+  }
 
+.subtitel3{
+    padding-top: 80px;
+    font-family: 'Inter' , 'sans-serif';
+    text-decoration: underline;
+    text-decoration-color: #1F4591;
+    line-height: 15px;
+}
+.schoolbestuur3{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+.schoolbestuur3 h3{
+    padding-bottom: 10px;
+    font-family: 'Inter' , 'sans-serif';
+    font-weight: lighter;
+    
+}
 
+.schoolbestuur3 ul li{
+    list-style-type: none;
+    font-family: 'Inter' , 'sans-serif';
+   
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.schoolbestuur3 div{
+    width: 40%;
+}
+.subtitel4{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 80px;
+    font-family: 'Inter' , 'sans-serif';
+    text-decoration: underline;
+    text-decoration-color: #1F4591;
+    line-height: 15px;
+}
+.schoolbestuur4{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+.schoolbestuur4 h3{
+    padding-bottom: 10px;
+    font-family: 'Inter' , 'sans-serif';
+    font-weight: lighter;
+    
+}
+.schoolbestuur4 ul li{
+    
+    list-style-type: none;
+    font-family: 'Inter' , 'sans-serif';
+   
+}
+.schoolbestuur4 div{
+    width: 40%;
+}
 
 
 
 /*footer*/
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
 .foot{
     display: flex;
     justify-content: flex-end;
