--- a/GloryMenga/style_Glory.css
+++ b/GloryMenga/style_Glory.css
@@ -187,6 +187,21 @@ ul.dropdown li a:hover{
     width: 100%;
     height: 900px;
     background-image: url(/images/school1.jpg);
+    animation: slide 30s infinite;
+}
+@keyframes slide{
+    25%{
+        background-image: url(/images/school2.jpg);
+    }
+    50%{
+        background-image: url(/images/school3.jpg);
+    }
+    75%{
+        background-image: url(/images/school4.jpg);
+    }
+    100%{
+        background-image: url(/images/school1.jpg);
+    }
 }
 .home h1{
     filter: none;
