--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -3,14 +3,11 @@
 	font-family: "SIMPLIFICA";
 	src: url(/SIMPLIFICA/SIMPLIFICA/SIMPLIFICA\ Typeface.ttf);
 }
-* {
-	margin: 0;
-	padding: 0;
-}
+
 .grid {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(10, 1fr);
+	grid-template-rows: repeat(2, 1fr);
 	font-family: "inter";
 	font-size: 15px;
 }
@@ -18,10 +15,18 @@
 	margin: 0;
 	padding: 0;
 }
-body {
-	background-color: #e4e7ec;
+* {
+	margin: 0;
+	padding: 0;
 }
-nav {
+body {
+	display: flex;
+	flex-direction: column;
+	background-color: #e4e7ec;
+	height: 100%;
+}
+/*nav*/
+.nav {
 	padding: 20px 0px;
 	margin: 0 auto;
 	width: 85%;
@@ -31,7 +36,7 @@ nav {
 	flex-direction: row;
 }
 .image {
-	width: 14%;
+	width: 190px;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
@@ -49,6 +54,11 @@ nav {
 	flex-direction: row;
 	align-items: center;
 }
+form {
+	display: flex;
+	align-items: center;
+}
+/*Searchbox*/
 input[type="text"] {
 	font-family: "SIMPLIFICA";
 	font-size: 20px;
@@ -57,22 +67,200 @@ input[type="text"] {
 	height: 35px;
 	border: 1px solid #000;
 	outline: none;
-	padding: 0 15px;
-	border-radius: 25px 0 0 25px;
+	padding: 0 20px;
+	border-radius: 15px 0 0 15px;
 }
 input[type="submit"] {
 	font-family: "SIMPLIFICA";
 	font-size: 18px;
-	border-radius: 0 25px 25px 0;
+	border-radius: 0 15px 15px 0;
 	border: none;
 	outline: none;
-	margin-left: -5px;
 	width: 30%;
-	height: 35px;
+	height: 37px;
 	cursor: pointer;
 	color: white;
 	background: #1f4591;
 }
+/*Searchbox*/
+
+.nav ul {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	flex-direction: row;
+	margin-right: 20px;
+}
+.nav a {
+	color: #000;
+	font-size: 22px;
+	font-family: "SIMPLIFICA";
+	text-decoration: none;
+}
+.nav li {
+	display: flex;
+	flex-direction: column;
+	margin-right: 30px;
+	list-style: none;
+}
+.menu ul li::after {
+	content: "";
+	width: 0%;
+	height: 2px;
+	background: #1f4591;
+	display: block;
+	margin: auto;
+	transition: 0.3s;
+}
+
+.menu ul li:hover::after {
+	width: 100%;
+}
+.dropdown {
+	display: flex;
+	flex-direction: column;
+	margin-top: 25px;
+}
+.menu ul li {
+	display: flex;
+	flex-direction: column;
+}
+.menu {
+	display: flex;
+	flex-direction: row;
+	margin-right: 10px;
+}
+.menu img {
+	width: 15%;
+}
+
+/*DropdownList*/
+ul.dropdown {
+	background-color: white;
+	border-radius: 15px;
+	z-index: 10;
+}
+ul li ul.dropdown li {
+	padding: 10px;
+	display: block;
+}
+ul li ul.dropdown {
+	position: absolute;
+	display: none;
+	transition: 0.3s;
+}
+ul li:hover ul.dropdown {
+	display: block;
+}
+ul.dropdown li::after {
+	width: 0%;
+	height: 1px;
+	background: #1f4591;
+	display: none;
+	margin: auto;
+	transition: 0.3s;
+}
+ul.dropdown li:hover::after {
+	width: 100%;
+}
+ul.dropdown li a:hover {
+	color: #1f4591;
+	font-weight: 600;
+}
+/*Dropdownlist*/
+.svg {
+	width: 4%;
+}
+.svg img {
+	width: 100%;
+}
+
+/*footer*/
+.foot {
+	display: flex;
+	justify-content: flex-end;
+	margin: 0 auto;
+	width: 85%;
+}
+.wit {
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-end;
+	background-color: #e4e7ec;
+	margin: 0 auto;
+	width: 85%;
+	height: 250px;
+}
+.kader {
+	font-family: "Inter", sans-serif;
+	position: absolute;
+	background-color: rgba(31, 69, 145, 0.9);
+	color: white;
+	display: flex;
+	flex-direction: column;
+	opacity: 80%;
+	border-radius: 15px;
+	margin-top: 100px;
+	width: 280px;
+	height: 290px;
+}
+.kader h1 {
+	margin-top: 25px;
+	margin-left: 13px;
+	margin-bottom: 18px;
+	font-size: 20px;
+}
+.blauw {
+	display: flex;
+	flex-direction: row;
+	background-color: rgba(31, 69, 145, 0.2);
+	width: 100%;
+	height: 220px;
+}
+.txtB {
+	font-family: "Inter", sans-serif;
+	display: flex;
+	flex-direction: row;
+	margin: 0 auto;
+	width: 80%;
+	padding-top: 40px;
+}
+
+.txtBlauw {
+	color: #000;
+	margin-right: 130px;
+}
+.txtBlauw h1 {
+	font-size: 20px;
+}
+.txtBlauw p {
+	font-size: 16px;
+	margin-top: 20px;
+}
+.txtBlauw a {
+	color: #000;
+	text-decoration: none;
+}
+.icons {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin-top: 15px;
+	margin-left: 40px;
+}
+.icon {
+	width: 14%;
+}
+.icon img {
+	width: 100%;
+}
+.icons p {
+	font-size: 14px;
+	margin-left: 13px;
+	line-height: 20px;
+	width: 60%;
+}
+
 .foto {
 	grid-column: 7/12;
 	grid-row: 1/8;
