--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -264,7 +264,7 @@ ul.dropdown li a:hover {
 .foto {
 	grid-column: 7/12;
 	grid-row: 1/8;
-	margin-top: 250px;
+	margin-top: 140px;
 }
 .foto img {
 	width: 100%;
@@ -272,6 +272,7 @@ ul.dropdown li a:hover {
 .tekst {
 	grid-column: 2/7;
 	margin-top: 100px;
+	margin-right: 30%;
 }
 .head {
 	margin-bottom: 140px;
