--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -265,17 +265,15 @@ h3{
 }
 
 .foto-inschrijvingen{
-  padding-top: 50px;
-  padding-left: 250px;
+  padding-left: 0px;
 }
 .foto-inschrijvingen img{
-  border: 4px solid rgba(31, 69, 145, 0.9);
   border-radius: 14px;
   padding: 5px;
   display: block;
   margin-left: auto;
   margin-right: 300px;
-  width: 80%;
+  width: 100%;
   
   
 }
@@ -288,8 +286,8 @@ h3{
 }
 
 .tekst2 h3{
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
 
 .inschrijvingen2 {
@@ -298,7 +296,10 @@ h3{
   justify-content: space-between;
   
 }
-
+h3.insch{
+  padding-top: 30px;
+  margin-bottom: 20px;
+}
 .inschrijvingen2 div {
   width: 30%;
 }
