--- a/NelleFavoreel/style_Nelle2.css
+++ b/NelleFavoreel/style_Nelle2.css
@@ -15,6 +15,7 @@
 	grid-column: 2/7;
 	grid-row: 2/4;
 	margin-bottom: 70px;
+	margin-top: 40px;
 }
 .head h1 {
 	font-weight: 100;
@@ -24,6 +25,10 @@
 .een {
 	grid-column: 2/5;
 	grid-row: 4/10;
+	font-weight: 100;
+}
+h3 {
+	font-weight: 100;
 }
 .twee {
 	grid-column: 5/9;
@@ -280,4 +285,9 @@ ul.dropdown li a:hover {
 	margin-left: 13px;
 	line-height: 20px;
 	width: 60%;
+}
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
 }
