--- a/NelleFavoreel/style_Nelle3.css
+++ b/NelleFavoreel/style_Nelle3.css
@@ -277,8 +277,17 @@ ul.dropdown li a:hover {
 .head {
 	margin-bottom: 140px;
 	font-family: "SIMPLIFICA";
+	margin-top: 40px;
 }
 .head h1 {
 	font-size: 60px;
+	font-weight: 100;
+}
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
+}
+h3 {
 	font-weight: 100;
 }
