--- a/NelleFavoreel/style_Nelle4.css
+++ b/NelleFavoreel/style_Nelle4.css
@@ -268,6 +268,7 @@ ul.dropdown li a:hover {
 	grid-column: 4/8;
 	grid-row: 2/5;
 	margin-left: 50px;
+	font-weight: 100;
 }
 .tekst2 {
 	grid-column: 8/12;
@@ -278,8 +279,17 @@ ul.dropdown li a:hover {
 	margin-top: 60px;
 	grid-column: 2/6;
 }
+h3 {
+	font-weight: 100;
+}
 .head h1 {
 	font-family: "SIMPLIFICA";
 	font-size: 60px;
 	font-weight: 100;
+	margin-top: 80px;
+}
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
 }
