--- a/NelleFavoreel/style_Nelle5.css
+++ b/NelleFavoreel/style_Nelle5.css
@@ -262,7 +262,7 @@ ul.dropdown li a:hover {
 .schoolvisie {
 	grid-column: 2/7;
 	grid-row: 1/2;
-	margin-top: 70px;
+	margin-top: 130px;
 	margin-right: 40px;
 }
 .schoolvisie h1 {
@@ -315,5 +315,16 @@ ul.dropdown li a:hover {
 	margin-bottom: 30px;
 	font-family: "SIMPLIFICA";
 	font-size: 40px;
+	font-weight: 100;
+}
+.top {
+	background-color: rgba(228, 231, 236, 0.8);
+	width: 100%;
+	position: fixed;
+}
+h3 {
+	font-weight: 100;
+}
+p {
 	font-weight: 100;
 }
